--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,13 @@ html {
     --COLOR_VERDE: #A3B5A6;
 }
 
+h2{
+    font-size: 30px;
+    color: var(--COLOR_GRIS_OSCURO);
+    text-transform: uppercase;
+    margin-top: 1em;
+}
+
 /* - VIDEO PRESENTACIÓN - */
 
 .contenedor-video{
@@ -77,7 +84,7 @@ html {
     margin-bottom: 0.2em;
 }
 
-.texto-video h2{
+.texto-video h3{
     font-size: 60px;
     font-family: 'Great Vibes', cursive;
     font-weight: 400;
@@ -152,7 +159,7 @@ html {
     position: relative;
     padding: 20px;
     max-width: 500px;
-    border: 1px solid var(--COLOR_ARENA);
+    border: 1px solid var(--COLOR_GRIS_OSCURO);
     border-radius: 12px;
     margin: 6em auto;
 }
@@ -201,7 +208,7 @@ html {
 .info-evento a{
     text-decoration: none;
     color: var(--COLOR_CREMA_CLARO);
-    background-color: var(--COLOR_VERDE);
+    background-color: var(--COLOR_GRIS_OSCURO);
     padding: 8px 15px;
     border-radius: 8px;
     font-size: 23px;
@@ -211,6 +218,274 @@ html {
 }
 
 .info-evento a:hover{
+    background-color: var(--COLOR_CREMA_CLARO);
+    color: var(--COLOR_GRIS_OSCURO);
+}
+
+
+/* -- GALERÍA DE FOTOS -- */
+
+.grid-imagenes {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 250px;
+    gap: 30px;
+    grid-template-areas:
+        "img1 img1 img2 img3"
+        "img4 img5 img2 img6";
+    width: 80%;
+    margin: 0 auto;
+    padding-bottom: 4em;
+}
+
+.img1 { grid-area: img1; }
+.img2 { grid-area: img2; }
+.img3 { grid-area: img3; }
+.img4 { grid-area: img4; }
+.img5 { grid-area: img5; }
+.img6 { grid-area: img6; }
+
+.grid-imagenes div img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    border-radius: 8px;
+}
+
+.grid-imagenes div{
+    transition: all .5s ease-in-out;
+}
+
+/* Efecto hover opcional */
+.imagen-hover:hover {
+    transform: scale(1.03);
+    transition: transform 0.3s ease;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+}
+
+
+/* -- DRESSCODE -- */
+
+.seccion-dresscode{
+    margin-bottom: 6em;
+}
+
+.seccion-dresscode p{
+    font-family: 'Great Vibes', cursive;
+    font-size: 40px;
+    color: var(--COLOR_GRIS_OSCURO);
+}
+
+.gif-dresscode{
+    width: 350px;
+    height: 350px;
+}
+
+
+/* -- REGALO -- */
+
+.regalo{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    width: 500px;
+    margin: 0 auto;
+    border-radius: 12px;
+    cursor: pointer;
+}
+
+.regalo hr{
+    height: 1px;
+    color: var(--COLOR_GRIS_OSCURO);
+    width: 400px;
+    margin-bottom: 1em;
+}
+
+.regalo p{
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 400px;
+    margin-bottom: 6em;
+}
+
+.regalo .regalo-superior{
+    width: 300px;
+    height: 95px;
+    background: url('/img/regalo-superior.png');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    z-index: 2;
+    position: absolute;
+    margin-bottom: -60px;
+    transition: all .3s ease;
+}
+
+.regalo .regalo-inferior{
+    width: 220px;
+    height: 137px;
+    background: url('/img/regalo-inferior.png');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-bottom: 2em;
+    z-index: 1;
+}
+
+.regalo .flores-chicas-sup{
+    position: absolute;
+    background: url('../img/flores_blancas1.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 200px;
+    height: 150px;
+    top: -45px;
+    left: 10%;
+    transform: translateX(-50%);
+    opacity: 99;
+}
+
+.regalo .flores-chicas-inf{
+    position: absolute;
+    background: url('../img/flores_blancas1.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: 200px;
+    height: 150px;
+    top: 280px;
+    left: 68%;
+    transform: translateX(-50%);
+    transform: rotate(180deg);
+}
+
+.abierta {
+    transform: translateY(-50px) rotate(20deg); 
+    transform-origin: center bottom;
+}
+
+/* MODAL */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.6);
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
+
+.contenido-modal {
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 12px;
+    text-align: center;
+    max-width: 400px;
+    width: 80%;
+    box-shadow: 0 0 20px rgba(0,0,0,0.2);
+}
+
+.cerrar {
+    position: absolute;
+    top: 20px;
+    right: 25px;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+
+/* ------- PLAYLIST ------- */
+
+.playlist {
+    text-align: center;
+    padding: 2em;
+    background: #f9f9f9;
+    border-radius: 12px;
+    margin: auto;
+    margin-top: 2em;
+}
+
+.playlist iframe{
+    width: 400px;
+    margin-top: 2em;
+}
+
+.playlist h3 {
+    font-family: "Cormorant Garamond", serif;
+    margin-bottom: 0.5em;
+    margin-top: 1em;
+    font-size: 24px;
+}
+
+.playlist p {
+    color: var(--COLOR_GRIS_OSCURO);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-bottom: 1em;
+}
+
+
+/* ---- CONFIRMAR ------ */
+
+.confirmar-asistencia{
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.confirmar-asistencia .icono-invitacion {
+    background: url('/img/icono-invitacion.png') center/contain no-repeat;
+    width: 80px;
+    height: 80px;
+    animation: sacudirSuave 3s infinite ease-in-out;
+}
+
+/* Animación para sacudir suavemente la invitación */
+@keyframes sacudirSuave {
+    /* Pausa inicial */
+    0%   { transform: rotate(0deg); }
+    
+    /* 1° sacudida */
+    5%   { transform: rotate(-5deg); }
+    10%  { transform: rotate(5deg); }
+    15%  { transform: rotate(0deg); }
+
+    /* 2° sacudida */
+    20%  { transform: rotate(-5deg); }
+    25%  { transform: rotate(5deg); }
+    30%  { transform: rotate(0deg); }
+
+    /* 3° sacudida */
+    35%  { transform: rotate(-5deg); }
+    40%  { transform: rotate(5deg); }
+    45%  { transform: rotate(0deg); }
+
+    /* Pausa hasta volver a empezar */
+    100% { transform: rotate(0deg); }
+}
+
+.confirmar-asistencia a{
+    text-decoration: none;
+    color: var(--COLOR_CREMA_CLARO);
+    background-color: var(--COLOR_GRIS_OSCURO);
+    padding: 8px 15px;
+    border-radius: 8px;
+    font-size: 23px;
+    font-weight: 600;
+    margin-top: 1em;
+    transition: all .8s ease;
+}
+
+.confirmar-asistencia a:hover{
     background-color: var(--COLOR_CREMA_CLARO);
     color: var(--COLOR_GRIS_OSCURO);
 }
@@ -225,6 +500,16 @@ html {
     }
     .cuenta-regresiva .grupo .grande{
         font-size: 2rem;
+    }
+
+    /*Galería de imágenes*/
+    .grid-imagenes {
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 120px;
+    grid-template-areas:
+        "img1 img2"
+        "img3 img4"
+        "img5 img6";
     }
 }
 
