--- a/css/styles.css
+++ b/css/styles.css
@@ -944,6 +944,17 @@ p{
     margin-bottom: 10em;
 }
 
+.titulo-asistencia{
+    background: url('../img/titulo-asistencia.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 320px;
+    height: 90px;
+    margin: 0 auto;
+    margin-bottom: 1.5em;
+}
+
 .confirmar-asistencia .contenedor-asistencia{
     width: 500px;
     height: auto;
